--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="card bg-red">
-      <h2>Yotube курсы</h2>
+      <h2>Youtube курсы</h2>
       <ul class="link-list">
         <li>
           <a href="https://www.youtube.com/watch?v=DOEtVdkKwcU&t=1533s">HTML для Начинающих - Практический Курс</a>
